fix: avoid flickering on dark mode

--- a/assets/main/scss/_reboot.scss
+++ b/assets/main/scss/_reboot.scss
@@ -9,7 +9,7 @@ html {
   }
 
   @if $backgroundImageDark != '' {
-    &[data-theme='dark'] {
+    &[data-bs-theme='dark'] {
       background-image: url($backgroundImageDark);
     }
   }
